--- a/index.html
+++ b/index.html
@@ -432,71 +432,62 @@
     <section class="blog" id="blog">
         <div class="container">
             <div class="section-header">
-                <span class="section-subtitle">Insights & Knowledge</span>
-                <h2 class="section-title">Civil Engineering Blog</h2>
-                <p class="section-description">Exploring the latest trends, innovations, and best practices in civil engineering</p>
+                <span class="section-subtitle">Education & Guidance</span>
+                <h2 class="section-title">Blog & Resources</h2>
+                <p class="section-description">Expert guidance for IOE entrance preparation and civil engineering insights</p>
             </div>
             <div class="blog-grid">
-                <article class="blog-card">
+                <!-- Featured IOE Blog -->
+                <article class="blog-card featured-post">
                     <div class="blog-image">
-                        <div class="blog-category">Structural Engineering</div>
-                        <i class="fas fa-building blog-icon"></i>
+                        <div class="blog-category">IOE Entrance</div>
+                        <i class="fas fa-graduation-cap blog-icon"></i>
                     </div>
                     <div class="blog-content">
                         <div class="blog-meta">
                             <span><i class="fas fa-calendar"></i> Jan 15, 2025</span>
-                            <span><i class="fas fa-clock"></i> 5 min read</span>
+                            <span><i class="fas fa-clock"></i> 12 min read</span>
                         </div>
-                        <h3>Seismic Design Principles for Modern Buildings</h3>
-                        <p>Understanding earthquake-resistant design is crucial for civil engineers. This article explores the fundamental principles of seismic design, including base isolation, damping systems, and structural flexibility that ensure buildings can withstand seismic forces.</p>
+                        <h3>How to Prepare for IOE Entrance Exam in 3 Months</h3>
+                        <p class="blog-excerpt">Preparing for the IOE Entrance Exam in just three months may sound challenging, but thousands of successful engineering students in Nepal have achieved it with the right strategy.</p>
+                        
+                        <a href="blog-ioe-entrance.html" class="read-more-link">
+                            <span>Read Full Article</span>
+                            <i class="fas fa-arrow-right"></i>
+                        </a>
+
                         <div class="blog-tags">
-                            <span class="tag">Earthquake Engineering</span>
-                            <span class="tag">Structural Design</span>
-                            <span class="tag">Safety</span>
+                            <span class="tag">IOE Entrance</span>
+                            <span class="tag">Study Plan</span>
+                            <span class="tag">Nepal</span>
                         </div>
-                        <a href="#" class="blog-link">Read More <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </article>
 
-                <article class="blog-card">
+                <!-- Nepal Political Situation Blog -->
+                <article class="blog-card featured-post">
                     <div class="blog-image">
-                        <div class="blog-category">Sustainable Construction</div>
-                        <i class="fas fa-leaf blog-icon"></i>
+                        <div class="blog-category">Current Affairs</div>
+                        <i class="fas fa-flag blog-icon"></i>
                     </div>
                     <div class="blog-content">
                         <div class="blog-meta">
-                            <span><i class="fas fa-calendar"></i> Jan 10, 2025</span>
-                            <span><i class="fas fa-clock"></i> 7 min read</span>
+                            <span><i class="fas fa-calendar"></i> Jan 16, 2025</span>
+                            <span><i class="fas fa-clock"></i> 10 min read</span>
                         </div>
-                        <h3>Green Building Materials: The Future of Construction</h3>
-                        <p>Sustainable construction is transforming the civil engineering industry. Discover innovative eco-friendly materials like recycled concrete, bamboo composites, and self-healing concrete that reduce environmental impact while maintaining structural integrity.</p>
-                        <div class="blog-tags">
-                            <span class="tag">Sustainability</span>
-                            <span class="tag">Green Technology</span>
-                            <span class="tag">Innovation</span>
-                        </div>
-                        <a href="#" class="blog-link">Read More <i class="fas fa-arrow-right"></i></a>
-                    </div>
-                </article>
+                        <h3>Nepal Political Situation 2026: Gen Z Protests & Elections</h3>
+                        <p class="blog-excerpt">Nepal is experiencing one of the most significant political transitions in recent history. The rise of youth-led Gen Z protests has reshaped the country's political landscape.</p>
+                        
+                        <a href="blog-nepal-politics.html" class="read-more-link">
+                            <span>Read Full Article</span>
+                            <i class="fas fa-arrow-right"></i>
+                        </a>
 
-                <article class="blog-card">
-                    <div class="blog-image">
-                        <div class="blog-category">Infrastructure</div>
-                        <i class="fas fa-road blog-icon"></i>
-                    </div>
-                    <div class="blog-content">
-                        <div class="blog-meta">
-                            <span><i class="fas fa-calendar"></i> Jan 5, 2025</span>
-                            <span><i class="fas fa-clock"></i> 6 min read</span>
-                        </div>
-                        <h3>Smart Infrastructure: IoT in Civil Engineering</h3>
-                        <p>The integration of IoT sensors and smart monitoring systems is revolutionizing infrastructure management. Learn how real-time data collection, predictive maintenance, and automated monitoring enhance the safety and longevity of bridges, roads, and buildings.</p>
                         <div class="blog-tags">
-                            <span class="tag">Smart Cities</span>
-                            <span class="tag">IoT</span>
-                            <span class="tag">Technology</span>
+                            <span class="tag">Nepal Politics</span>
+                            <span class="tag">Gen Z</span>
+                            <span class="tag">2026 Elections</span>
                         </div>
-                        <a href="#" class="blog-link">Read More <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </article>
             </div>
