--- a/blog-nepal-politics.html
+++ b/blog-nepal-politics.html
@@ -306,41 +306,46 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
     <script>
         // Theme Toggle for Blog Pages
-        const themeToggle = document.getElementById('themeToggle');
-        let isDarkMode = localStorage.getItem('darkMode') === 'true';
+        document.addEventListener('DOMContentLoaded', function() {
+            const themeToggle = document.getElementById('themeToggle');
+            let isDarkMode = localStorage.getItem('darkMode') === 'true';
 
-        // Apply saved theme on load
-        if (isDarkMode) {
-            document.body.classList.add('dark-theme');
-            updateThemeIcon(true);
-        }
-
-        themeToggle.addEventListener('click', () => {
-            isDarkMode = !isDarkMode;
-            document.body.classList.toggle('dark-theme');
-            localStorage.setItem('darkMode', isDarkMode);
-            updateThemeIcon(isDarkMode);
-        });
-
-        function updateThemeIcon(isDark) {
-            const sunIcon = themeToggle.querySelector('.sun-icon');
-            const moonIcon = themeToggle.querySelector('.moon-icon');
-            
-            if (isDark) {
-                sunIcon.style.opacity = '0';
-                sunIcon.style.transform = 'translateY(-20px) rotate(-90deg)';
-                moonIcon.style.opacity = '1';
-                moonIcon.style.transform = 'translateY(0) rotate(0deg)';
-            } else {
-                sunIcon.style.opacity = '1';
-                sunIcon.style.transform = 'translateY(0) rotate(0deg)';
-                moonIcon.style.opacity = '0';
-                moonIcon.style.transform = 'translateY(20px) rotate(90deg)';
+            // Apply saved theme on load
+            if (isDarkMode) {
+                document.body.classList.add('dark-theme');
+                updateThemeIcon(true);
             }
-        }
+
+            if (themeToggle) {
+                themeToggle.addEventListener('click', () => {
+                    isDarkMode = !isDarkMode;
+                    document.body.classList.toggle('dark-theme');
+                    localStorage.setItem('darkMode', isDarkMode);
+                    updateThemeIcon(isDarkMode);
+                });
+            }
+
+            function updateThemeIcon(isDark) {
+                const sunIcon = themeToggle.querySelector('.sun-icon');
+                const moonIcon = themeToggle.querySelector('.moon-icon');
+                
+                if (sunIcon && moonIcon) {
+                    if (isDark) {
+                        sunIcon.style.opacity = '0';
+                        sunIcon.style.transform = 'translateY(-20px) rotate(-90deg)';
+                        moonIcon.style.opacity = '1';
+                        moonIcon.style.transform = 'translateY(0) rotate(0deg)';
+                    } else {
+                        sunIcon.style.opacity = '1';
+                        sunIcon.style.transform = 'translateY(0) rotate(0deg)';
+                        moonIcon.style.opacity = '0';
+                        moonIcon.style.transform = 'translateY(20px) rotate(90deg)';
+                    }
+                }
+            }
+        });
     </script>
 </body>
 </html>
